[workspace]
resolver = "2"
exclude = [
	# wasmtime host smoke tests
	"keetanetwork-client-wasi/host-tests",
]
members = [
	"keetanetwork-account",
	"keetanetwork-error",
	"keetanetwork-crypto",
	"keetanetwork-x509",
	"keetanetwork-asn1",
	"keetanetwork-utils",
	"keetanetwork-block",
	"keetanetwork-vote",
	"keetanetwork-ledger",
	"keetanetwork-node",
	"keetanetwork-client",
	"keetanetwork-bindings",
	"keetanetwork-client-wasm",
	"keetanetwork-client-wasi",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Tanveer Wahid <twahid@keeta.com>"]
license = "MIT"
repository = "https://github.com/KeetaNetwork/node-rs"
homepage = "https://github.com/KeetaNetwork/node-rs"
description = "Keetanetwork blockchain implementation in Rust"

[workspace.dependencies]
# Common dependencies that can be shared across workspace members

[workspace.dependencies.chrono]
version = "0.4.41"
default-features = false
features = ["serde"]

[workspace.dependencies.base32]
version = "0.5.1"
default-features = false

[workspace.dependencies.base64]
version = "0.22.1"
default-features = false

[workspace.dependencies.bip39-dict]
version = "0.1.3"

[workspace.dependencies.hex]
version = "0.4.3"
default-features = false
features = ["serde"]

[workspace.dependencies.hex-literal]
version = "1.0.0"

[workspace.dependencies.der]
version = "0.7.10"
default-features = false
features = ["pem", "zeroize", "bytes", "oid", "derive"]

[workspace.dependencies.rasn]
version = "0.27.1"
default-features = false

[workspace.dependencies.const-oid]
version = "0.9.6"
default-features = false

[workspace.dependencies.serde]
version = "1.0.219"
features = ["derive"]

[workspace.dependencies.serde_json]
version = "1.0.143"

[workspace.dependencies.secrecy]
version = "0.10.3"
features = ["serde"]

[workspace.dependencies.snafu]
version = "0.8.7"
default-features = false

[workspace.dependencies.strum]
version = "0.27.2"

[workspace.dependencies.strum_macros]
version = "0.27.2"

[workspace.dependencies.lazy_static]
version = "1.5.0"

[workspace.dependencies.spin]
version = "0.9.8"
default-features = false

[workspace.dependencies.rand_core]
version = "0.9.3"
default-features = false

[workspace.dependencies.rand]
version = "0.9.2"

[workspace.dependencies.num-bigint]
version = "0.4.6"
default-features = false

[workspace.dependencies.futures]
version = "0.3"
default-features = false

[workspace.dependencies.futures-core]
version = "0.3"

[workspace.dependencies.async-trait]
version = "0.1"

[workspace.dependencies.tokio]
version = "1"

[workspace.dependencies.reqwest]
version = "0.13.4"
default-features = false

[workspace.dependencies.progenitor-client]
version = "0.14.0"

[workspace.dependencies.progenitor]
version = "0.14.0"

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
debug = false
lto = true
codegen-units = 1
panic = "abort"

[profile.test]
opt-level = 1
debug = true
