[package]
name = "accounts"
version.workspace = true
authors.workspace = true
edition.workspace = true

[lib]
name = "accounts"
crate-type = ["staticlib", "cdylib"]
path = "src/lib.rs"

[dependencies]
# Local crates
crypto = { path = "../crypto" }

# External dependencies
base32.workspace = true
bip39-dict.workspace = true
hex.workspace = true
strum.workspace = true
strum_macros.workspace = true
zeroize = { version = "1.8.1", features = ["derive"] }
rand_core = { version = "0.9.3", features = ["std", "os_rng"] }
secrecy.workspace = true
keetanet-error = { path = "../keetanet-error" }
