[package]
name = "asn1"
version = "0.1.0"
edition = "2021"

[dependencies.der]
workspace = true

[dependencies.const-oid]
workspace = true

[dependencies.hex]
workspace = true

[dependencies.snafu]
workspace = true

[dependencies.serde]
workspace = true
optional = true

[dependencies.utils]
path = "../utils"

[dev-dependencies]
serde_json = { workspace = true }

[features]
default = ["serde"]
serde = ["dep:serde"]
