[package]
name = "asn1"
version = "0.1.0"
edition = "2021"

[dependencies.spki]
version = "0.7.3"
features = ["std"]

[dependencies.der]
workspace = true
optional = true

[dependencies.rasn]
workspace = true
optional = true

[dependencies.const-oid]
workspace = true
optional = true

[dependencies.hex]
workspace = true

[dependencies.snafu]
workspace = true

[dependencies.serde]
workspace = true
optional = true

[dependencies.utils]
path = "../utils"

[build-dependencies]
utils = { path = "../utils", features = ["build"] }

[dev-dependencies]
serde_json = { workspace = true }

[features]
default = ["serde", "der"]
der = ["dep:der", "dep:const-oid"]
rasn = ["dep:rasn"]
serde = ["dep:serde"]
