[package]
name = "crypto"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
# Cryptographic libraries
[dependencies.k256]
version = "0.13.2"
features = ["ecdsa"]

[dependencies.p256]
version = "0.13.2"
features = ["ecdsa"]

[dependencies.ed25519-dalek]
version = "2.0"
features = ["std", "rand_core"]

[dependencies.x25519-dalek]
version = "2.0"
features = ["zeroize"]

[dependencies.curve25519-dalek]
version = "4.0"

[dependencies.hkdf]
version = "0.12.4"
features = ["std"]

[dependencies.pbkdf2]
version = "0.12.2"
features = ["hmac", "parallel", "sha2", "std"]

[dependencies.sha2]
version = "0.10.9"
features = ["asm", "asm-aarch64", "sha2-asm"]

[dependencies.sha3]
version = "0.10.8"
features = ["asm"]

[dependencies.zeroize]
version = "1.8.1"
features = ["derive"]

[dependencies.rand_core]
version = "0.9.3"
features = ["std", "os_rng"]

[dependencies.snafu]
workspace = true

# RustCrypto trait crates
[dependencies.signature]
version = "2.2"
default-features = false
features = ["alloc"]
optional = true

[dependencies.aead]
version = "0.5"
default-features = false
features = ["alloc"]
optional = true

[dependencies.ecies]
version = "0.2"
default-features = false
features = ["pure"]
optional = true

# Utilities
[dependencies.bip39-dict]
version = "0.1.3"

[dependencies.secrecy]
version = "0.10.3"
features = ["serde"]

# Encoding
[dependencies.base32]
workspace = true

[dependencies.hex]
workspace = true

# Local dependencies
[dependencies.keetanet-error]
path = "../keetanet-error"

[features]
default = ["signature", "encryption"]
signature = ["dep:signature"]
encryption = ["dep:aead", "dep:ecies"]

[dev-dependencies]
hex-literal.workspace = true
aes-gcm = "0.10.3"
