[package]
name = "crypto"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
# Cryptographic libraries
[dependencies.k256]
version = "0.13.2"
features = ["ecdsa", "ecdh"]

[dependencies.p256]
version = "0.13.2"
features = ["ecdsa", "ecdh"]

[dependencies.ed25519-dalek]
version = "2.0"
features = ["std", "rand_core"]

[dependencies.x25519-dalek]
version = "2.0"
features = ["zeroize"]

[dependencies.curve25519-dalek]
version = "4.0"

[dependencies.hkdf]
version = "0.12.4"
features = ["std"]

[dependencies.pbkdf2]
version = "0.12.2"
features = ["hmac", "parallel", "sha2", "std"]

[dependencies.sha1]
version = "0.10.6"
features = ["asm"]

[dependencies.sha2]
version = "0.10.9"
features = ["asm", "asm-aarch64", "sha2-asm"]

[dependencies.sha3]
version = "0.10.8"
features = ["asm"]

[dependencies.zeroize]
version = "1.8.1"
features = ["derive"]

[dependencies.rand_core]
version = "0.9.3"
features = ["std", "os_rng"]

[dependencies.snafu]
workspace = true

# RustCrypto trait crates
[dependencies.signature]
version = "2.2"
default-features = false
features = ["alloc"]
optional = true

[dependencies.aead]
version = "0.5"
default-features = false
features = ["alloc"]
optional = true

[dependencies.aes]
version = "0.8"
optional = true

[dependencies.cbc]
version = "0.1.2"
features = ["alloc"]
optional = true

[dependencies.ctr]
version = "0.9.2"
features = ["zeroize"]
optional = true

[dependencies.subtle]
version = "2.6.1"
default-features = false
optional = true

[dependencies.hmac]
version = "0.12.1"
optional = true

[dependencies.rand]
version = "0.9.2"
optional = true

[dependencies.aes-gcm]
version = "0.10.3"
features = ["std"]

# Utilities
[dependencies.bip39-dict]
version = "0.1.3"

[dependencies.crypto-bigint]
version = "0.6.1"
features = ["serde", "der", "zeroize"]

[dependencies.strum]
workspace = true

[dependencies.strum_macros]
workspace = true

[dependencies.secrecy]
version = "0.10.3"
features = ["serde"]

# Encoding
[dependencies.base32]
workspace = true

[dependencies.base64]
version = "0.22"

[dependencies.hex]
workspace = true

[dependencies.chrono]
workspace = true
optional = true

# Local dependencies
[dependencies.keetanet-error]
path = "../keetanet-error"

[dependencies.asn1]
path = "../asn1"
optional = true

[features]
default = ["signature", "encryption", "der"]
signature = ["dep:signature"]
encryption = [
	"dep:aead",
	"dep:aes",
	"dep:cbc",
	"dep:ctr",
	"dep:hmac",
	"dep:rand",
	"dep:subtle",
]
der = ["dep:asn1"]

[dev-dependencies]
hex-literal.workspace = true
