[package]
name = "keetanetwork-account"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Account management and cryptographic identities for Keetanetwork"

[lib]
path = "src/lib.rs"

[dependencies]
keetanetwork-crypto = { workspace = true, features = ["signature", "encryption"] }
keetanetwork-error = { workspace = true }
keetanetwork-utils = { workspace = true }
keetanetwork-asn1 = { workspace = true, optional = true }

base32.workspace = true
bip39-dict.workspace = true
hex = { workspace = true }
snafu = { workspace = true }
strum.workspace = true
strum_macros.workspace = true
zeroize = { version = "1.8.1", default-features = false, features = ["derive"] }
rand_core = { workspace = true, features = ["os_rng"] }

[dev-dependencies]
base64.workspace = true

[features]
default = ["std", "rasn"]
std = [
	"alloc",
	"keetanetwork-crypto/std",
	"keetanetwork-error/std",
	"keetanetwork-utils/std",
	"keetanetwork-asn1?/std",
	"hex/std",
	"snafu/std",
	"rand_core/std",
	"zeroize/std",
]
alloc = ["keetanetwork-error/alloc", "zeroize/alloc"]
der = ["keetanetwork-asn1/der", "keetanetwork-crypto/der"]
rasn = ["keetanetwork-asn1/rasn", "keetanetwork-crypto/rasn"]
