[package]
name = "keetanetwork-asn1"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "ASN.1 definitions and utilities for Keetanetwork"

[lib]
crate-type = ["staticlib", "rlib"]
path = "src/lib.rs"

[dependencies.spki]
version = "0.7.3"
features = ["std"]

[dependencies.der]
workspace = true

[dependencies.rasn]
workspace = true
optional = true

[dependencies.const-oid]
workspace = true
optional = true

[dependencies.hex]
workspace = true

[dependencies.snafu]
workspace = true

[dependencies.serde]
workspace = true
optional = true

[dependencies.chrono]
workspace = true
optional = true

[dependencies.lazy_static]
workspace = true

[dependencies.num-bigint]
version = "0.4.6"

[dependencies]
keetanetwork-utils = { version = "0.1.0", path = "../keetanetwork-utils" }

[build-dependencies]
serde_json = "1.0"
rasn-compiler = "0.14.2"
keetanetwork-utils = { version = "0.1.0", path = "../keetanetwork-utils", features = [
	"build",
] }

[dev-dependencies]
serde_json = { workspace = true }

[features]
default = ["serde", "rasn"]
der = ["dep:const-oid", "chrono"]
rasn = ["dep:rasn", "chrono"]
serde = ["dep:serde"]
chrono = ["dep:chrono"]
