[package]
name = "keetanetwork-block"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Block structure and operations for Keetanetwork blockchain"

[features]
default = ["std"]
std = ["alloc"]
alloc = ["der/alloc"]

[dependencies]
der = { version = "0.7.10", default-features = false, features = ["derive"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde-json-core = { version = "0.6", default-features = false }
base64ct = { version = "1.8", default-features = false }

[dev-dependencies]
der = "0.7.10"
hex-literal = "0.4"

[lib]
name = "keetanetwork_block"
path = "src/lib.rs"
