[package]
name = "keetanetwork-client-wasm"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "WebAssembly bindings for the KeetaNet client"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
keetanetwork-account = { version = "0.1.0", path = "../keetanetwork-account", default-features = false, features = ["alloc", "rasn"] }
keetanetwork-block = { version = "0.1.0", path = "../keetanetwork-block", default-features = false, features = ["alloc", "rasn"] }
num-bigint = { workspace = true }

[target.'cfg(target_family = "wasm")'.dependencies]
keetanetwork-client = { version = "0.1.0", path = "../keetanetwork-client", default-features = false, features = ["wasm"] }
keetanetwork-crypto = { version = "0.1.0", path = "../keetanetwork-crypto", default-features = false, features = ["signature"] }
keetanetwork-x509 = { version = "0.1.0", path = "../keetanetwork-x509", default-features = false, features = ["rasn"] }
keetanetwork-asn1 = { version = "0.1.0", path = "../keetanetwork-asn1", default-features = false, features = ["alloc", "rasn"] }
chrono = { workspace = true }
hex = { workspace = true, features = ["alloc"] }
serde = { workspace = true, features = ["derive"] }
serde-wasm-bindgen = "0.6"
tsify-next = { version = "0.5", default-features = false, features = ["js"] }
js-sys = "0.3"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"

[target.'cfg(target_family = "wasm")'.dev-dependencies]
wasm-bindgen-test = "0.3"
